--- a/style.css
+++ b/style.css
@@ -1,6 +1,43 @@
 header
 {
+
+}
+
+.banner 
+{
     position: relative;
-    left: 100px;
-    top: 20px;
+}
+
+.banner .img
+{
+    width: 100%;
+    max-width: 100%;
+    height: 50%;
+}
+
+.banner .wel
+{
+    padding:15px;
+    position: absolute;
+    left: 5%;
+    top: 1%;
+}
+.banner .wel2
+{
+    position: absolute;
+    padding: 30px;
+    left: 30%;
+    top: 14%;
+}
+.banner .wel
+{
+    font-size: 80px;
+    font-family: sans-serif;
+}
+.banner .wel2
+{
+    color:black;
+    font-family: Comic Sans MS;
+    font-size: 80px;
+
 }
