--- a/style.css
+++ b/style.css
@@ -1,6 +1,24 @@
 header
 {
+    background-color: crimson;
+    padding: 2px;
+    text-align: center;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+    top: 0px;
+    left: 0px;
 
+}
+header h1
+{
+    color: white;
+    border: 8px solid;
+    padding: 6px 12px ;
+    font-family: Comic Sans MS;
+    font-size: 40px;
+    display: inline-block;
+    border-radius: 40px;
 }
 
 .banner 
@@ -10,9 +28,8 @@ header
 
 .banner .img
 {
-    width: 100%;
-    max-width: 100%;
-    height: 50%;
+   width: 100%;
+    
 }
 
 .banner .wel
@@ -20,7 +37,7 @@ header
     padding:15px;
     position: absolute;
     left: 5%;
-    top: 1%;
+    top: 5%;
 }
 .banner .wel2
 {
@@ -38,6 +55,6 @@ header
 {
     color:black;
     font-family: Comic Sans MS;
-    font-size: 80px;
+    font-size: 100px;
 
 }
